--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <!-- link your javascript sketch -->
     <script src="scripts/sprites.js" type="text/javascript"></script>
 
-    <script src="main.js" type="text/javascript"></script>
-
     <script src="characters_environment.js" type="text/javascript"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -31,7 +29,7 @@
         <center>
          <div class="btn btn-primary heading">
          <h3>AI PING PONG GAME</h3>
-         <button class="btn btn-primary" data-toggle="#myModal">Instructions</button>
+         <button class="btn btn-primary" data-target="#myModal" data-toggle = "modal">Instructions</button>
          </div>
    
          <br><br>
@@ -40,7 +38,44 @@
          <h3 id="status" class="btn btn-warning"></h3>
          <br><br>
          <div id="canvas"></div>
-         <div id="game_console"></div>
+         <button class="btn btn-danger" onclick="restart()">Restart</button>
+
+         <h4 id="footer">Developed by : Siddharth Josyula</h4>
+
+         <div id="myModal" class="modal fade">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button class="close" data-dismiss="modal">&times;</button>
+                <h4>Instructions</h4>
+              </div>
+  
+              <div class="modal-body">
+               <ol>
+                <li>
+                  First keep your laptop screen straight
+                </li>
+                <li>
+                  Move yourself approximately 3-4 feet away from the laptop
+                </li>
+                <li>
+                  Move your right wrist in an ascending and descending manner, a red dot should appear on your right wrist.
+                </li>
+                <li>
+                  Now press the play button, and move yourself 3-4 feet away fron the laptop.
+                </li>
+                <li>
+                  The red paddel is your paddle, that will move as per the movement of your right wrist.
+                </li>
+               </ol>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
         </center>
 
         <script src="main.js"></script>
